// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`go-emitter byte-equivalence > crud client + types stable > crud client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"encoding/json"
	"fmt"
)

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Users *UsersResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	cfg = prepareConfig(cfg)
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Users = newUsersResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil {
		return false
	}
	return c.stale.IsStale(method, path)
}

// UsersResource groups the "users" operations.
type UsersResource struct {
	client *Client
}

func newUsersResource(c *Client) *UsersResource {
	r := &UsersResource{client: c}
	return r
}

// Create — Create user
func (r *UsersResource) Create(ctx context.Context, body UserCreateInput, opts *UsersCreateOpts) (*User, error) {
	var err error
	path := "/users"
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string(nil)
	selector := "POST " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "POST")
	}
	result, err := doRequest(ctx, r.client.cfg, "POST", path, q, jsonBody(body), callHeaders, "POST /users", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "POST", requestMeta.SeqSnapshot)
		}
	}
	var out User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// Delete — Delete user
func (r *UsersResource) Delete(ctx context.Context, id string, opts *UsersDeleteOpts) error {
	var err error
	path, err := expandPath("/users/{id}", map[string]string{"id": id})
	if err != nil {
		return err
	}
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string{"id": id}
	selector := "DELETE " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "DELETE")
	}
	_, err = doRequest(ctx, r.client.cfg, "DELETE", path, q, noBody(), callHeaders, "DELETE /users/{id}", requestMeta)
	if err != nil {
		return err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "DELETE", requestMeta.SeqSnapshot)
		}
	}
	return nil
}

// Get — Get user by id
func (r *UsersResource) Get(ctx context.Context, id string, opts *UsersGetOpts) (*User, error) {
	var err error
	path, err := expandPath("/users/{id}", map[string]string{"id": id})
	if err != nil {
		return nil, err
	}
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string{"id": id}
	selector := "GET " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "GET")
	}
	result, err := doRequest(ctx, r.client.cfg, "GET", path, q, noBody(), callHeaders, "GET /users/{id}", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "GET", requestMeta.SeqSnapshot)
		}
	}
	var out User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// List — List users
func (r *UsersResource) List(ctx context.Context, opts *UsersListOpts) (*[]User, error) {
	var err error
	path := "/users"
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string(nil)
	selector := "GET " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "GET")
	}
	result, err := doRequest(ctx, r.client.cfg, "GET", path, q, noBody(), callHeaders, "GET /users", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "GET", requestMeta.SeqSnapshot)
		}
	}
	var out []User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// Update — Patch user
func (r *UsersResource) Update(ctx context.Context, id string, body UserPatchInput, opts *UsersUpdateOpts) (*User, error) {
	var err error
	path, err := expandPath("/users/{id}", map[string]string{"id": id})
	if err != nil {
		return nil, err
	}
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string{"id": id}
	selector := "PATCH " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "PATCH")
	}
	result, err := doRequest(ctx, r.client.cfg, "PATCH", path, q, jsonBody(body), callHeaders, "PATCH /users/{id}", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "PATCH", requestMeta.SeqSnapshot)
		}
	}
	var out User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// UsersCreateOpts holds the optional inputs of Create.
type UsersCreateOpts struct {
	Headers map[string]string
}

// UsersDeleteOpts holds the optional inputs of Delete.
type UsersDeleteOpts struct {
	Headers map[string]string
}

// UsersGetOpts holds the optional inputs of Get.
type UsersGetOpts struct {
	Headers map[string]string
}

// UsersListOpts holds the optional inputs of List.
type UsersListOpts struct {
	Headers map[string]string
}

// UsersUpdateOpts holds the optional inputs of Update.
type UsersUpdateOpts struct {
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > crud client + types stable > crud types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import "encoding/json"

type ErrorEnvelope struct {
	ErrorKey string \`json:"error_key"\`
	Fields map[string][]string \`json:"fields"\`
	Message string \`json:"message"\`
	Status int64 \`json:"status"\`
	StatusKey string \`json:"status_key"\`
	Success bool \`json:"success"\`
}

func (s ErrorEnvelope) MarshalJSON() ([]byte, error) {
	type plain ErrorEnvelope
	p := plain(s)
	if p.Fields == nil {
		p.Fields = map[string][]string{}
	}
	return json.Marshal(p)
}

type User struct {
	Email string \`json:"email"\`
	Id string \`json:"id"\`
	Name string \`json:"name"\`
}

type UserCreateInput struct {
	Email string \`json:"email"\`
	Name string \`json:"name"\`
}

type UserPatchInput struct {
	Email *string \`json:"email,omitempty"\`
	Name *string \`json:"name,omitempty"\`
}

"
`;

exports[`go-emitter byte-equivalence > discriminated client + types stable > discriminated client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"encoding/json"
	"fmt"
)

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Animals *AnimalsResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	cfg = prepareConfig(cfg)
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Animals = newAnimalsResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil {
		return false
	}
	return c.stale.IsStale(method, path)
}

// AnimalsResource groups the "animals" operations.
type AnimalsResource struct {
	client *Client
}

func newAnimalsResource(c *Client) *AnimalsResource {
	r := &AnimalsResource{client: c}
	return r
}

// Get — Get animal
func (r *AnimalsResource) Get(ctx context.Context, id string, opts *AnimalsGetOpts) (*Animal, error) {
	var err error
	path, err := expandPath("/animals/{id}", map[string]string{"id": id})
	if err != nil {
		return nil, err
	}
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string{"id": id}
	selector := "GET " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "GET")
	}
	result, err := doRequest(ctx, r.client.cfg, "GET", path, q, noBody(), callHeaders, "GET /animals/{id}", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "GET", requestMeta.SeqSnapshot)
		}
	}
	var out Animal
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// List — List animals
func (r *AnimalsResource) List(ctx context.Context, opts *AnimalsListOpts) (*[]Animal, error) {
	var err error
	path := "/animals"
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string(nil)
	selector := "GET " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "GET")
	}
	result, err := doRequest(ctx, r.client.cfg, "GET", path, q, noBody(), callHeaders, "GET /animals", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "GET", requestMeta.SeqSnapshot)
		}
	}
	var out []Animal
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// AnimalsGetOpts holds the optional inputs of Get.
type AnimalsGetOpts struct {
	Headers map[string]string
}

// AnimalsListOpts holds the optional inputs of List.
type AnimalsListOpts struct {
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > discriminated client + types stable > discriminated types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import "encoding/json"

// Animal holds exactly one variant, selected by the "kind" property.
type Animal struct {
	Dog *Dog
	Cat *Cat
	// Raw keeps a payload whose discriminator matches no known variant.
	Raw json.RawMessage
}

func (u *Animal) UnmarshalJSON(data []byte) error {
	var probe map[string]json.RawMessage
	if err := json.Unmarshal(data, &probe); err != nil {
		return err
	}
	var tag string
	if v, ok := probe["kind"]; ok {
		_ = json.Unmarshal(v, &tag)
	}
	*u = Animal{}
	switch tag {
	case "dog":
		u.Dog = new(Dog)
		return json.Unmarshal(data, u.Dog)
	case "cat":
		u.Cat = new(Cat)
		return json.Unmarshal(data, u.Cat)
	}
	u.Raw = append(json.RawMessage(nil), data...)
	return nil
}

func (u Animal) MarshalJSON() ([]byte, error) {
	if u.Dog != nil {
		return json.Marshal(u.Dog)
	}
	if u.Cat != nil {
		return json.Marshal(u.Cat)
	}
	if u.Raw != nil {
		return u.Raw, nil
	}
	return []byte("null"), nil
}

type Cat struct {
	Indoor bool \`json:"indoor"\`
	Kind string \`json:"kind"\`
}

type Dog struct {
	Breed string \`json:"breed"\`
	Kind string \`json:"kind"\`
}

"
`;

exports[`go-emitter byte-equivalence > invalidation client + types stable > invalidation client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"encoding/json"
	"fmt"
)

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Users *UsersResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	cfg = prepareConfig(cfg)
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Users = newUsersResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil {
		return false
	}
	return c.stale.IsStale(method, path)
}

// UsersResource groups the "users" operations.
type UsersResource struct {
	client *Client
}

func newUsersResource(c *Client) *UsersResource {
	r := &UsersResource{client: c}
	return r
}

// Create — Create user
func (r *UsersResource) Create(ctx context.Context, body UserCreateInput, opts *UsersCreateOpts) (*User, error) {
	var err error
	path := "/users"
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string(nil)
	selector := "POST " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "POST")
	}
	result, err := doRequest(ctx, r.client.cfg, "POST", path, q, jsonBody(body), callHeaders, "POST /users", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		r.client.stale.MarkStale([]string{"GET /users", "GET /users/:id"}, pathParams, selector)
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "POST", requestMeta.SeqSnapshot)
		}
	}
	var out User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// GetById — Get user by id
func (r *UsersResource) GetById(ctx context.Context, id string, opts *UsersGetByIdOpts) (*User, error) {
	var err error
	path, err := expandPath("/users/{id}", map[string]string{"id": id})
	if err != nil {
		return nil, err
	}
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string{"id": id}
	selector := "GET " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "GET")
	}
	result, err := doRequest(ctx, r.client.cfg, "GET", path, q, noBody(), callHeaders, "GET /users/{id}", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "GET", requestMeta.SeqSnapshot)
		}
	}
	var out User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// List — List users
func (r *UsersResource) List(ctx context.Context, opts *UsersListOpts) (*[]User, error) {
	var err error
	path := "/users"
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string(nil)
	selector := "GET " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "GET")
	}
	result, err := doRequest(ctx, r.client.cfg, "GET", path, q, noBody(), callHeaders, "GET /users", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "GET", requestMeta.SeqSnapshot)
		}
	}
	var out []User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// UsersCreateOpts holds the optional inputs of Create.
type UsersCreateOpts struct {
	Headers map[string]string
}

// UsersGetByIdOpts holds the optional inputs of GetById.
type UsersGetByIdOpts struct {
	Headers map[string]string
}

// UsersListOpts holds the optional inputs of List.
type UsersListOpts struct {
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > invalidation client + types stable > invalidation types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

type User struct {
	Email string \`json:"email"\`
	Id string \`json:"id"\`
}

type UserCreateInput struct {
	Email string \`json:"email"\`
}

"
`;

exports[`go-emitter byte-equivalence > refs client + types stable > refs client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"encoding/json"
	"fmt"
)

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Comments *CommentsResource
	Users *UsersResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	cfg = prepareConfig(cfg)
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Comments = newCommentsResource(c)
	c.Users = newUsersResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil {
		return false
	}
	return c.stale.IsStale(method, path)
}

// CommentsResource groups the "comments" operations.
type CommentsResource struct {
	client *Client
}

func newCommentsResource(c *Client) *CommentsResource {
	r := &CommentsResource{client: c}
	return r
}

// Get — Get comment with self-ref parent
func (r *CommentsResource) Get(ctx context.Context, id string, opts *CommentsGetOpts) (*Comment, error) {
	var err error
	path, err := expandPath("/comments/{id}", map[string]string{"id": id})
	if err != nil {
		return nil, err
	}
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string{"id": id}
	selector := "GET " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "GET")
	}
	result, err := doRequest(ctx, r.client.cfg, "GET", path, q, noBody(), callHeaders, "GET /comments/{id}", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "GET", requestMeta.SeqSnapshot)
		}
	}
	var out Comment
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// UsersResource groups the "users" operations.
type UsersResource struct {
	client *Client
}

func newUsersResource(c *Client) *UsersResource {
	r := &UsersResource{client: c}
	return r
}

// Get — Get user with comments
func (r *UsersResource) Get(ctx context.Context, id string, opts *UsersGetOpts) (*User, error) {
	var err error
	path, err := expandPath("/users/{id}", map[string]string{"id": id})
	if err != nil {
		return nil, err
	}
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string{"id": id}
	selector := "GET " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "GET")
	}
	result, err := doRequest(ctx, r.client.cfg, "GET", path, q, noBody(), callHeaders, "GET /users/{id}", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "GET", requestMeta.SeqSnapshot)
		}
	}
	var out User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// CommentsGetOpts holds the optional inputs of Get.
type CommentsGetOpts struct {
	Headers map[string]string
}

// UsersGetOpts holds the optional inputs of Get.
type UsersGetOpts struct {
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > refs client + types stable > refs types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

type Comment struct {
	Author *User \`json:"author,omitempty"\`
	Body string \`json:"body"\`
	Id string \`json:"id"\`
	Parent *Comment \`json:"parent,omitempty"\`
}

type User struct {
	Comments []Comment \`json:"comments,omitempty"\`
	Email string \`json:"email"\`
	Id string \`json:"id"\`
}

"
`;

exports[`go-emitter byte-equivalence > reserved-words client + types stable > reserved-words client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"encoding/json"
	"fmt"
)

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Await *AwaitResource
	Class *ClassResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	cfg = prepareConfig(cfg)
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Await = newAwaitResource(c)
	c.Class = newClassResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil {
		return false
	}
	return c.stale.IsStale(method, path)
}

// AwaitResource groups the "await" operations.
type AwaitResource struct {
	client *Client
}

func newAwaitResource(c *Client) *AwaitResource {
	r := &AwaitResource{client: c}
	return r
}

// Yield — More reserved words as resource and action
func (r *AwaitResource) Yield(ctx context.Context, body AwaitYieldBody, opts *AwaitYieldOpts) (*map[string]interface{}, error) {
	var err error
	path := "/await/yield"
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string(nil)
	selector := "POST " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "POST")
	}
	result, err := doRequest(ctx, r.client.cfg, "POST", path, q, jsonBody(body), callHeaders, "POST /await/yield", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "POST", requestMeta.SeqSnapshot)
		}
	}
	var out map[string]interface{}
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// ClassResource groups the "class" operations.
type ClassResource struct {
	client *Client
}

func newClassResource(c *Client) *ClassResource {
	r := &ClassResource{client: c}
	return r
}

// From — Both parts are Python reserved words
func (r *ClassResource) From(ctx context.Context, opts *ClassFromOpts) (*string, error) {
	var err error
	path := "/class/from"
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		q.set("async", opts.Async)
		q.set("return", opts.Return)
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	pathParams := map[string]string(nil)
	selector := "GET " + path
	var requestMeta *RequestMeta
	if r.client.stale != nil {
		requestMeta = r.client.stale.BuildRequestMeta(selector, path, "GET")
	}
	result, err := doRequest(ctx, r.client.cfg, "GET", path, q, noBody(), callHeaders, "GET /class/from", requestMeta)
	if err != nil {
		return nil, err
	}
	if r.client.stale != nil {
		_ = pathParams
		if requestMeta != nil && requestMeta.IsStale {
			r.client.stale.ClearStale(selector, path, "GET", requestMeta.SeqSnapshot)
		}
	}
	var out string
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil {
			return nil, fmt.Errorf("honey: decode response: %w", err)
		}
	}
	return &out, nil
}

// AwaitYieldOpts holds the optional inputs of Yield.
type AwaitYieldOpts struct {
	Headers map[string]string
}

// ClassFromOpts holds the optional inputs of From.
type ClassFromOpts struct {
	Async *bool
	Return *string
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > reserved-words client + types stable > reserved-words types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk


type AwaitYieldBody struct {
	Import string \`json:"import"\`
	Lambda *int64 \`json:"lambda,omitempty"\`
}
"
`;

exports[`go-emitter byte-equivalence > sse client + types stable > sse client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"iter"
)

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Events *EventsResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	cfg = prepareConfig(cfg)
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Events = newEventsResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil {
		return false
	}
	return c.stale.IsStale(method, path)
}

// EventsResource groups the "events" operations.
type EventsResource struct {
	client *Client
}

func newEventsResource(c *Client) *EventsResource {
	r := &EventsResource{client: c}
	return r
}

// Stream — Stream events
func (r *EventsResource) Stream(ctx context.Context, opts *EventsStreamOpts) iter.Seq2[SSEEvent, error] {
	return func(yield func(SSEEvent, error) bool) {
		path := "/events/stream"
		var q queryList
		callHeaders := map[string]string{"Accept": "text/event-stream"}
		if opts != nil {
			q.set("topic", opts.Topic)
			for k, v := range opts.Headers {
				callHeaders[k] = v
			}
		}
		if opts != nil && opts.LastEventID != "" {
			callHeaders["Last-Event-ID"] = opts.LastEventID
		}
		resp, err := openStream(ctx, r.client.cfg, "GET", path, q, noBody(), callHeaders)
		if err != nil {
			yield(SSEEvent{}, err)
			return
		}
		for ev, err := range parseSSEStream(ctx, resp) {
			if !yield(ev, err) {
				return
			}
		}
	}
}

// EventsStreamOpts holds the optional inputs of Stream.
type EventsStreamOpts struct {
	Topic *string
	LastEventID string
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > sse client + types stable > sse types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk


"
`;

exports[`go-emitter byte-equivalence > ws client + types stable > ws client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"

	"nhooyr.io/websocket"
)

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Realtime *RealtimeResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	cfg = prepareConfig(cfg)
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Realtime = newRealtimeResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil {
		return false
	}
	return c.stale.IsStale(method, path)
}

// RealtimeResource groups the "realtime" operations.
type RealtimeResource struct {
	client *Client
}

func newRealtimeResource(c *Client) *RealtimeResource {
	r := &RealtimeResource{client: c}
	return r
}

// Subscribe — Subscribe to realtime updates
func (r *RealtimeResource) Subscribe(ctx context.Context, opts *RealtimeSubscribeOpts) (*TypedWebSocket, error) {
	path := "/realtime/subscribe"
	var q queryList
	callHeaders := map[string]string{}
	if opts != nil {
		q.set("channel", opts.Channel)
		q.set("reconnect_token", opts.ReconnectToken2)
		for k, v := range opts.Headers {
			callHeaders[k] = v
		}
	}
	if opts != nil && opts.ReconnectToken != "" {
		q.set("reconnect_token", opts.ReconnectToken)
	}
	wsURL, err := buildURL(r.client.cfg.BaseURL, path, q)
	if err != nil {
		return nil, err
	}
	dialOpts := &websocket.DialOptions{HTTPClient: streamClient(r.client.cfg), HTTPHeader: authHeaders(r.client.cfg, callHeaders)}
	if opts != nil && len(opts.Protocols) > 0 {
		dialOpts.Subprotocols = opts.Protocols
	}
	conn, _, err := websocket.Dial(ctx, toWsURL(wsURL), dialOpts)
	if err != nil {
		return nil, err
	}
	return newTypedWebSocket(conn), nil
}

// RealtimeSubscribeOpts holds the optional inputs of Subscribe.
type RealtimeSubscribeOpts struct {
	Channel string
	ReconnectToken2 *string
	ReconnectToken string
	Protocols []string
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > ws client + types stable > ws types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk


"
`;
